add loading + visibility logic

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
 
 <body>
     <div>
+        <h4 id="landmarkVisibility" style="text-align: center;"></h4>
+        <h2 id="loading" style="text-align: center;"><strong>Loading...Please wait!</strong> </h2>
         <div class="info">
             <div class="infoLine">
                 <h2>Jabs:</h2>
