--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div>
         <h4 id="landmarkVisibility" style="text-align: center;"></h4>
         <h2 id="loading" style="text-align: center;"><strong>Loading...Please wait!</strong> </h2>
-        <div class="info">
+        <div class="info" id="info">
             <div class="infoLine">
                 <h2>Jabs:</h2>
                 <h2 id="jabNum">0</h2>
