add some logic for game

--- a/index.html
+++ b/index.html
@@ -23,9 +23,12 @@
                 <h2>Jabs:</h2>
                 <h2 id="jabNum">0</h2>
             </div>
-            <div class="infoLine">
+            <div>
                 <h2>Straights:</h2>
                 <h2 id="straightNum">0</h2>
+            </div>
+            <div class="infoLine">
+                <button id="playGame">Play Game?</button>
             </div>
         </div>
     </div>
