add some logic for game

--- a/index.html
+++ b/index.html
@@ -23,12 +23,26 @@
                 <h2>Jabs:</h2>
                 <h2 id="jabNum">0</h2>
             </div>
-            <div>
+            <div class="infoLine">
                 <h2>Straights:</h2>
                 <h2 id="straightNum">0</h2>
             </div>
             <div class="infoLine">
                 <button id="playGame">Play Game?</button>
+            </div>
+        </div>
+        <div class="gameInfo" id="gameInfo">
+            <div>
+                <h2>Correct:</h2>
+                <h2 id="numCorrect">0</h2>
+            </div>
+            <div>
+                <h2>Incorrect:</h2>
+                <h2 id="numIncorrect">0</h2>
+            </div>
+            <div>
+                <h2>Combo:</h2>
+                <h2 id="combo"></h2>
             </div>
         </div>
     </div>
