--- a/index.html
+++ b/index.html
@@ -32,18 +32,20 @@
             </div>
         </div>
         <div class="gameInfo" id="gameInfo">
-            <div>
-                <h2>Correct:</h2>
-                <h2 id="numCorrect">0</h2>
+            <div class="correctAndIncorrect">
+                <div class="infoLine">
+                    <h2>Correct:</h2>
+                    <h2 id="numCorrect">0</h2>
+                </div>
+                <div class="infoLine">
+                    <h2>Incorrect:</h2>
+                    <h2 id="numIncorrect">0</h2>
+                </div>
             </div>
-            <div>
-                <h2>Incorrect:</h2>
-                <h2 id="numIncorrect">0</h2>
-            </div>
-            <div>
-                <h2>Combo:</h2>
-                <h2 id="combo"></h2>
-            </div>
+        </div>
+        <div id="comboInfo">
+            <h2 class="bigFont">Combo:</h2>
+            <h2 class="bigFont" id="combo"></h2>
         </div>
     </div>
     <div class="cam-container">
