add sound into game

--- a/test.html
+++ b/test.html
@@ -14,17 +14,13 @@
 
 
     <script>
-        let combo;
         const audioButton = document.getElementById('audioTest')
         audioButton.addEventListener('click', myPlay);
 
         function myPlay() {
-            if (!combo) {
-                console.log("test1")
-            }
-            else {
-                console.log("test2")
-            }
+            console.log("testestsetset")
+            let audio = new Audio("jab.mp3");
+            audio.play();
         }
 
     </script>
